Dropbox/Trabalho/Pixeon/Bitbucket/pixeon-eng-sre-platform-04e299f662b3/containers/rancher2/stg-pixeon-hub/stg-pixeon-hub.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stg-pixeon-hub
  namespace: stg-pixeon-hub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: stg-pixeon-hub
  template:
    metadata:
      labels:
        app: stg-pixeon-hub
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: stg-pixeon-hub
        image: "registry.pixeon.cloud/hub-server:0.1.0"
        ports:
        - containerPort: 8080
          name: grpc
        - containerPort: 9090
          name: rest
---
apiVersion: v1
kind: Service
metadata:
  name: stg-rest-hub
  namespace: stg-pixeon-hub
spec:
  ports:
  - port: 9090
  selector:
    app: stg-pixeon-hub
---
apiVersion: v1
kind: Service
metadata:
  name: stg-grpc-hub
  namespace: stg-pixeon-hub
spec:
  ports:
  - port: 8080
  selector:
    app: stg-pixeon-hub
